--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 # to native line endings on checkout.
 *.py text
 *.rst text
+*.bib text
 
 # Declare files that will always have CRLF line endings on checkout.
 # *.sln text eol=crlf
