Clean root directory before moving gh-pages docs
Modify gh-pages target in doc/Makefile:
Add line to docs/Makefile to remove the underscore directories before moving
the newly created html to the root directory.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -57,6 +57,7 @@ gh-pages:
 	git checkout master $(GH_PAGES_SOURCES)
 	git reset HEAD
 	make html
+	rm -rf ../_modules ../_sources ../_static
 	mv -fv $(BUILDDIR)/html/* ../
 	rm -rf $(GH_PAGES_SOURCES) $(BUILDIR)
 	git add -A :/
