Change documentation build to use project README
Change the sphinx build process to use /README.rst and CONTRIBUTING.rst as
sections in doc/index.rst. This requires two dummy files in the doc directory
with include directives.

Add link to license from documentation

Add sphinx doc stubs for README, AUTHORS, etc

--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,5 +1,9 @@
 # ignore sphinx output
 _*
-# ignore sphinx-apidoc output (all rst except index)
+# ignore sphinx-apidoc output (all rst except files listed after)
 *.rst
 !index.rst
+!README.rst
+!CONTRIBUTING.rst
+!LICENSE.rst
+!AUTHORS.rst
